--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "format": "next lint -- --fix"
   },
   "dependencies": {
+    "form-data": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -23,6 +25,7 @@
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "formidable": "^3.5.1",
     "postcss": "^8",
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.0",
