--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -25,6 +29,7 @@
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "font-awesome-icons": "^1.6.0",
     "formidable": "^3.5.1",
     "postcss": "^8",
     "prettier": "3.1.0",
